# puer-binding-generator

./: .gitignore  LICENSE  package-lock.json  package.json  readme.md
action/: build.js
sample/: CMakeLists.txt  binding.config.js  run.bat  test-gen.bat
sample/puerts_unreal_demo/: binding.config.js
sample/src/: main.cpp  main.h
src/cs/: CppAst.sln
src/cs/CppAst/: CppAst.csproj  CppElement.cs  CppExtensions.cs  CppModelBuilder.cs
src/cs/PuertsCppGenerator/: PuertsCppGenerator.cs  PuertsCppGenerator.csproj
src/cs/PuertsCppGenerator.Tests/: Program.cs  PuertsCppGenerator.Tests.csproj
src/cs/PuertsCppGenerator/puerts.core/Default/JSType/: GenericDelegate.cs
src/cs/PuertsCppGenerator/puerts.core/Editor/Resources/puerts/templates/: cppwrapper.tpl.mjs
src/js/: generator.mts  tsconfig.json
src/js/dts/Typing/csharp/: index.d.ts
src/js/lib/: GenerateContext.mts  SupportChecks.mts  UsageCollector.mts  csUtil.mts  definitions.mts  globalConfig.mts  util.mts
src/js/lib/render/: binding.mts  declaration.mts  dts.mts  patchjs.mts
src/js/puerts/: log.mjs
unittest/: binding.config.js  main.h
unittest/output/: all.binding.cpp  index.d.ts
